@@ -23,6 +23,10 @@ Added
 
 - New `tabs.tooltips` setting which can be used to disable hover tooltips for
   tabs.
+- New settings to configure the appearance of context menus:
+  - `fonts.contextmenu`
+  - `colors.contextmenu.bg`
+  - `colors.contextmenu.fg`
 
 Changed
 ~~~~~~~
